--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="icon" type="image/svg" href="/assets/svg/logo.svg">
-  <title>Fallout Workshop Item Lookup</title>
+  <title>Fallout 76 C.A.M.P. Item Category Lookup</title>
   <style>
     body {
       font-family: Arial, sans-serif;
