--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="icon" type="image/svg" href="/assets/svg/logo.svg">
-  <title>Fallout 76 C.A.M.P. Item Category Lookup</title>
+  <title>Fallout 76 C.A.M.P. Item Lookup</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -33,7 +33,7 @@
   </style>
 </head>
 <body>
-  <h1>Fallout Workshop Item Lookup</h1>
+  <h1>Fallout 76 C.A.M.P. Item Lookup</h1>
   <input type="text" id="searchBox" placeholder="Enter item name..." autofocus>
   <ul id="results"></ul>
 
