--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -34,6 +34,7 @@
 </head>
 <body>
   <h1>Fallout 76 C.A.M.P. Item Lookup</h1>
+  <p style="color: #555; font-size: 14px;">Last Updated: September 9, 2025</p>
   <input type="text" id="searchBox" placeholder="Enter item name..." autofocus>
   <ul id="results"></ul>
 
