--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -24,29 +24,51 @@
       padding-left: 0;
     }
     li {
+      padding: 6px;
+      background-color: #fff;
+      margin-bottom: 10px;
+      border-radius: 4px;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.1);
       display: flex;
       align-items: center;
       gap: 10px;
-      padding: 6px;
-      background-color: #fff;
-      margin-bottom: 4px;
-      border-radius: 4px;
-      box-shadow: 0 1px 2px rgba(0,0,0,0.1);
     }
     li img {
-      width: 48px;
-      height: 48px;
-      object-fit: contain;
+      width: 80px;
+      height: 80px;
+      object-fit: cover;
       border-radius: 4px;
-      background: #eee;
+      cursor: pointer;
+    }
+    /* Modal overlay */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 9999;
+      padding-top: 60px;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0,0,0,0.9);
+    }
+    .modal img {
+      display: block;
+      margin: auto;
+      max-width: 90%;
+      max-height: 90%;
+      border-radius: 6px;
     }
   </style>
 </head>
 <body>
   <h1>Fallout 76 C.A.M.P. Item Lookup</h1>
-  <p style="color: #555; font-size: 14px;">Last Updated: September 13, 2025</p>
+  <p style="color: #555; font-size: 14px;">Last Updated: September 9, 2025</p>
   <input type="text" id="searchBox" placeholder="Enter item name..." autofocus>
   <ul id="results"></ul>
+
+  <!-- Modal -->
+  <div id="imgModal" class="modal" onclick="this.style.display='none'">
+    <img id="modalImg" src="">
+  </div>
 
   <script>
   fetch('final_workshop_db.json')
@@ -54,6 +76,8 @@
     .then(db => {
       const searchBox = document.getElementById('searchBox');
       const results = document.getElementById('results');
+      const modal = document.getElementById('imgModal');
+      const modalImg = document.getElementById('modalImg');
 
       searchBox.addEventListener('input', () => {
         const query = searchBox.value.toLowerCase();
@@ -69,24 +93,30 @@
           matches.forEach(r => {
             const li = document.createElement('li');
 
-            // Try to load an image from Images/<FormID>.png
-            const img = document.createElement('img');
-            img.src = `Images/${r.CNAM_FormID.toLowerCase()}.png`;
-            img.alt = r.Name;
-            img.onerror = () => { img.style.display = 'none'; }; // hide if not found
-
-            // Text description
             let text;
             if (r.Category.toLowerCase() === 'wallpapers') {
               text = `${r.Name} → ${r.Category}`;
             } else {
               text = `${r.Name} → ${r.Category} / ${r.SubCategory}`;
             }
+
             const span = document.createElement('span');
             span.textContent = text;
-
-            li.appendChild(img);
             li.appendChild(span);
+
+            if (r.CNAM_FormID) {
+              const img = document.createElement('img');
+              img.src = `Images/${r.CNAM_FormID.toLowerCase()}.png`;
+              img.alt = r.Name;
+
+              img.addEventListener('click', () => {
+                modalImg.src = img.src;
+                modal.style.display = 'block';
+              });
+
+              li.appendChild(img);
+            }
+
             results.appendChild(li);
           });
         }
