--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -54,7 +54,7 @@
   <div class="controls">
     <input type="text" id="searchBox" placeholder="Enter item name..." autofocus>
     <br>
-    <input type="checkbox" id="toggleImages" checked>
+    <input type="checkbox" id="toggleImages">
     <label for="toggleImages">Show Images</label>
   </div>
 
