--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -49,7 +49,8 @@
 </head>
 <body>
   <h1>Fallout 76 C.A.M.P. Item Lookup</h1>
-  <p style="color: #555; font-size: 14px;">Last Updated: September 9, 2025</p>
+  <p style="color: #555; font-size: 14px;">Last Updated: September 13, 2025</p>
+  <p style="color: #555; font-size: 10px;">Made by MrsBlobby</p>
 
   <div class="controls">
     <input type="text" id="searchBox" placeholder="Enter item name..." autofocus>
