--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -119,7 +119,7 @@
       gap: 0; /* arrows handle spacing */
     }
 
-    .result-right span {
+    .result-right span.pill {
       background: var(--bg);
       border: 2px solid var(--accent);
       border-radius: 20px;
@@ -131,13 +131,15 @@
       align-items: center;
     }
 
-    /* Add arrows between pills */
-    .result-right span:not(:last-child)::after {
-      content: "→";
-      margin-left: 6px;
-      margin-right: 6px;
-      color: var(--accent);
-      font-weight: normal;
+    .result-right span.arrow {
+      display: inline-block;
+      width: 0;
+      height: 0;
+      border-top: 6px solid transparent;
+      border-bottom: 6px solid transparent;
+      border-left: 10px solid var(--accent);
+      margin: 0 6px;
+      vertical-align: middle;
     }
 
     /* Version history */
@@ -185,9 +187,16 @@
         margin-top: 10px;
       }
 
-      .result-right span {
+      .result-right span.pill {
         font-size: 12px;
         padding: 2px 6px;
+      }
+
+      .result-right span.arrow {
+        border-top: 4px solid transparent;
+        border-bottom: 4px solid transparent;
+        border-left: 8px solid var(--accent);
+        margin: 0 4px;
       }
     }
   </style>
@@ -279,20 +288,26 @@
               left.appendChild(img);
             }
 
-            // right column: categories as pills
+            // right column: categories as pills with arrows
             const right = document.createElement('div');
             right.className = 'result-right';
 
-            if (r.Category) {
+            const categories = [];
+            if (r.Category) categories.push(r.Category);
+            if (r.SubCategory && r.Category.toLowerCase() !== 'wallpapers') categories.push(r.SubCategory);
+
+            categories.forEach((cat, index) => {
               const catSpan = document.createElement('span');
-              catSpan.textContent = r.Category;
+              catSpan.className = 'pill';
+              catSpan.textContent = cat;
               right.appendChild(catSpan);
-            }
-            if (r.SubCategory && r.Category.toLowerCase() !== 'wallpapers') {
-              const subSpan = document.createElement('span');
-              subSpan.textContent = r.SubCategory;
-              right.appendChild(subSpan);
-            }
+
+              if (index < categories.length - 1) {
+                const arrow = document.createElement('span');
+                arrow.className = 'arrow';
+                right.appendChild(arrow);
+              }
+            });
 
             li.appendChild(left);
             li.appendChild(right);
