--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -93,11 +93,12 @@
       flex-direction: column;
       align-items: center;
       flex-shrink: 0;
-      max-width: 150px;
+      max-width: 220px;
     }
 
     .result-name {
       font-weight: bold;
+      font-size: 18px;
       color: var(--accent);
       margin-bottom: 6px;
       text-align: center;
@@ -123,10 +124,10 @@
       background: var(--bg);
       border: 2px solid var(--accent);
       border-radius: 20px;
-      padding: 2px 8px;       /* smaller padding */
-      font-size: 14px;         /* smaller font */
+      padding: 4px 12px;       
+      font-size: 16px;        
       color: var(--accent);
-      font-weight: normal;     /* non-bold */
+      font-weight: normal;    
       display: inline-flex;
       align-items: center;
     }
