Update Index.html. Add CoverImage.png

--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -204,11 +204,11 @@
 </head>
 <body>
   <div class="container">
-    <h1>Fallout 76 C.A.M.P. Item Lookup</h1>
+    <img src="assets/CoverImage.png" alt="Fallout 76 C.A.M.P. Item Lookup" style="display: block; margin: 0 auto; max-width: 100%; height: auto;">
     <div class="meta">
       <p style="color: var(--text-muted); font-size: 14px;">Made by MrsBlobby</p>
       <p style="color: var(--text-muted); font-size: 12px;">
-        Last Updated: September 14, 2025. V1.2
+        Last Updated: September 26, 2025.
       </p>
     </div>
 
@@ -222,21 +222,26 @@
         </ul>
       </div>
       <div class="changelog-entry">
-        <h4>V1.1</h4>
+        <h4>v1.1</h4>
         <ul>
           <li>Added image support</li>
         </ul>
       </div>
       <div class="changelog-entry">
-        <h4>V1.1.1</h4>
+        <h4>v1.1.1</h4>
         <ul>
           <li>Fixed wallpaper images</li>
         </ul>
       </div>
       <div class="changelog-entry">
-        <h4>V1.2</h4>
+        <h4>v1.2</h4>
         <ul>
           <li>Added version history</li>
+        </ul>
+      <div class="changelog-entry">
+        <h4>v2.0</h4>
+        <ul>
+          <li>Reworked UI entirely. Added more mobile-friendly UI</li>
         </ul>
       </div>
     </details>
@@ -245,7 +250,7 @@
   <div class="controls">
     <input type="text" id="searchBox" placeholder="Enter item name..." autofocus>
     <br>
-    <input type="checkbox" id="toggleImages">
+    <input type="checkbox" id="toggleImages"> checked
     <label for="toggleImages">Show Images</label>
   </div>
 
