--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -250,7 +250,7 @@
   <div class="controls">
     <input type="text" id="searchBox" placeholder="Enter item name..." autofocus>
     <br>
-    <input type="checkbox" id="toggleImages"> checked
+    <input type="checkbox" id="toggleImages"> checked>
     <label for="toggleImages">Show Images</label>
   </div>
 
