--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -93,7 +93,7 @@
       flex-direction: column;
       align-items: center;
       flex-shrink: 0;
-      max-width: 220px;
+      width: 220px;
     }
 
     .result-name {
@@ -162,13 +162,12 @@
       color: var(--accent);
     }
     .changelog-entry li {
+      border: none;
+      box-shadow: none; 
       background: none;
-      box-shadow: none;
-      margin-bottom: 2px;
-      padding: 0;
-      font-size: 12px;
-      color: var(--text-muted);
-      display: list-item;
+      text-align: center;
+      padding: 0;   
+      margin: 6px 0; 
     }
 
     /* Mobile tweaks */
