--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -156,18 +156,18 @@
       text-align: center;
     }
     .changelog-entry h4 {
-      margin: 2px 0;
-      font-size: 12px;
+      margin: 0 0 4px 0;
+      font-size: 14px;
       font-weight: bold;
       color: var(--accent);
     }
-    .changelog-entry li {
-      border: none;
-      box-shadow: none; 
-      background: none;
-      text-align: center;
-      padding: 0;   
-      margin: 6px 0; 
+    .changelog-entry {
+      background: rgba(255, 192, 15, 0.05);
+      border-left: 3px solid var(--accent);
+      border-radius: 4px;
+      padding: 6px 12px;
+      margin: 6px 0;
+      text-align: left;
     }
 
     /* Mobile tweaks */
