--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -237,6 +237,7 @@
         <ul>
           <li>Added version history</li>
         </ul>
+      </div>
       <div class="changelog-entry">
         <h4>v2.0</h4>
         <ul>
