--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Fallout 76 C.A.M.P. Item Lookup">
+  <meta property="og:description" content="Tool for finding the location of Fallout 76 C.A.M.P. items in the building menu">
+  <meta property="og:image" content="https://github.com/MrsBlobby/mrsblobby.github.io/blob/main/assets/CAMPIcon.png">
+  <meta property="og:url" content="https://yourdomain.com/">
+  <meta property="og:type" content="website">
   <link rel="icon" type="image/svg" href="/assets/svg/CAMPIcon.svg">
   <title>Fallout 76 C.A.M.P. Item Lookup</title>
   <style>
