--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -249,6 +249,12 @@
           <li>Reworked UI entirely. Added more mobile-friendly UI</li>
         </ul>
       </div>
+      <div class="changelog-entry">
+        <h4>v2.1</h4>
+        <ul>
+          <li>Added embed when linking tool on Discord</li>
+        </ul>
+      </div>
     </details>
   </div>
 
