--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -212,13 +212,19 @@
     <div class="meta">
       <p style="color: var(--text-muted); font-size: 14px;">Made by MrsBlobby</p>
       <p style="color: var(--text-muted); font-size: 12px;">
-        Last Updated: September 28, 2025
+        Last Updated: October 1, 2025
       </p>
     </div>
 
     <!-- Version history -->
     <details>
       <summary>Version History</summary>
+      <div class="changelog-entry">
+        <h4>v2.1.2</h4>
+        <ul>
+          <li>Fixed issue that caused a lot of Turret entries to be missing</li>
+        </ul>
+      </div>
       <div class="changelog-entry">
         <h4>v2.1.1</h4>
         <ul>
