--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -212,7 +212,7 @@
     <div class="meta">
       <p style="color: var(--text-muted); font-size: 14px;">Made by MrsBlobby</p>
       <p style="color: var(--text-muted); font-size: 12px;">
-        Last Updated: October 1, 2025
+        Last Updated: October 4, 2025
       </p>
     </div>
 
@@ -270,12 +270,122 @@
     </details>
   </div>
 
-  <div class="controls">
-    <input type="text" id="searchBox" placeholder="Enter item name..." autofocus>
-    <br>
-    <input type="checkbox" id="toggleImages" checked>
-    <label for="toggleImages">Show Images</label>
-  </div>
+<div class="controls">
+  <input type="text" id="searchBox" placeholder="Enter item name..." autofocus>
+  <br>
+  <input type="checkbox" id="toggleImages" checked>
+  <label for="toggleImages">Show Images</label>
+  <br><br>
+  <label for="sortMode" style="color: var(--text-muted); font-size: 14px;">Sort By:</label>
+  <select id="sortMode" style="padding: 6px; border-radius: 6px; background-color: var(--card-bg); color: var(--text); border: 2px solid var(--accent);">
+    <option value="camp-bottom">Workshop Menu ▲</option>
+    <option value="camp-top" selected>Workshop Menu ▼</option>
+    <option value="new-old">New ▲</option>
+    <option value="old-new">New ▼</option>
+  </select>
+</div>
+
+<ul id="results"></ul>
+
+<script>
+fetch('final_workshop_db.json')
+  .then(response => response.json())
+  .then(db => {
+    const searchBox = document.getElementById('searchBox');
+    const results = document.getElementById('results');
+    const toggleImages = document.getElementById('toggleImages');
+    const sortMode = document.getElementById('sortMode');
+
+    function sortItems(items) {
+      const mode = sortMode.value;
+
+      if (mode === 'camp-bottom') {
+        return [...items].reverse(); // bottom → top
+      } else if (mode === 'new-old') {
+        return [...items].sort((a, b) => (b.CNAM_FormID || '').localeCompare(a.CNAM_FormID || ''));
+      } else if (mode === 'old-new') {
+        return [...items].sort((a, b) => (a.CNAM_FormID || '').localeCompare(b.CNAM_FormID || ''));
+      }
+      // default CAMP top → bottom order = as-is
+      return items;
+    }
+
+    function renderResults(query) {
+      results.innerHTML = '';
+
+      // Always show all results if no query
+      const filtered = db.filter(item =>
+        !query || (item.Name && item.Name.toLowerCase().includes(query))
+      );
+
+      const sorted = sortItems(filtered);
+
+      if (sorted.length === 0) {
+        results.innerHTML = '<li>No matches found</li>';
+        return;
+      }
+
+      sorted.forEach(r => {
+        const li = document.createElement('li');
+
+        // left column: name + image
+        const left = document.createElement('div');
+        left.className = 'result-left';
+
+        const name = document.createElement('div');
+        name.className = 'result-name';
+        name.textContent = r.Name;
+        left.appendChild(name);
+
+        if (toggleImages.checked && r.CNAM_FormID) {
+          const img = document.createElement('img');
+          img.src = `Images/${r.CNAM_FormID.toLowerCase()}.png`;
+          img.alt = r.Name;
+          img.loading = "lazy";
+          left.appendChild(img);
+        }
+
+        // right column: categories as pills with arrows
+        const right = document.createElement('div');
+        right.className = 'result-right';
+
+        const categories = [];
+        if (r.Category) categories.push(r.Category);
+        if (r.SubCategory && r.Category.toLowerCase() !== 'wallpapers')
+          categories.push(r.SubCategory);
+
+        categories.forEach((cat, index) => {
+          const catSpan = document.createElement('span');
+          catSpan.className = 'pill';
+          catSpan.textContent = cat;
+          right.appendChild(catSpan);
+
+          if (index < categories.length - 1) {
+            const arrow = document.createElement('span');
+            arrow.className = 'arrow';
+            right.appendChild(arrow);
+          }
+        });
+
+        li.appendChild(left);
+        li.appendChild(right);
+        results.appendChild(li);
+      });
+    }
+
+    // Event listeners
+    searchBox.addEventListener('input', () => renderResults(searchBox.value.toLowerCase()));
+    toggleImages.addEventListener('change', () => renderResults(searchBox.value.toLowerCase()));
+    sortMode.addEventListener('change', () => renderResults(searchBox.value.toLowerCase()));
+
+    // Render everything on first load
+    renderResults('');
+  })
+  .catch(err => {
+    console.error("Failed to load database:", err);
+    document.getElementById('results').innerHTML = '<li>Error loading database.</li>';
+  });
+</script>
 
   <ul id="results"></ul>
 
